# FarmHub-Management

./: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
core/: manage.py
core/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
core/accounts/migrations/: 0001_initial.py  0002_seed_initial_data.py
core/config/: settings.py  urls.py
core/farms/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/farms/migrations/: 0001_initial.py
core/livestock/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/livestock/migrations/: 0001_initial.py
core/production/: admin.py  models.py  serializers.py  urls.py  views.py
core/production/migrations/: 0001_initial.py
postman/: FarmHub API.postman_collection.json  FarmHub.postman_collection.json
reporting/: README.md  main.py  pyproject.toml  requirements.txt  test_endpoints.py
